# fastslr

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ai_pipeline.py  ai_pipeline_tui.py  pyproject.toml
.github/workflows/: publish-pypi.yml
.pipeline/: config.toml
.pipeline/prompts/: classify.txt  implement.txt  plan.txt  review.txt
.pipeline/schemas/: classify_schema.json  plan_schema.json
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/: .gitignore  pyproject.toml  triagem.bat
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/docs/: LIVE_DEMO_TRIAGEM_BAT.md  LIVE_DEMO_TRIAGEM_BAT_VARIACOES.md  PROTOCOL.md  PROTOCOLO_RSL_Completo_v12.md
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/src/fastslr/: __init__.py  adapters.py  bat_ui.py  cli.py  config.py  constants.py  default_config.json  diff.py  engine.py  io.py  launcher_entrypoint.py  launcher_profile_load.py  launcher_profile_save.py  project.py  scoring.py
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/src/fastslr/legacy/: README.md  __init__.py  cli.py  constants.py  default_config.json  engine.py  io.py  models.py  normalization.py
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/src/rsl_triage/: __init__.py
Documents/Computing/Projeto_Mestrado/rsl_triage_starter/tests/: conftest.py  test_compliance.py  test_engine.py  test_normalization.py  test_patterns.py
data/: Final_Corpus.csv  terms_final.csv
docs/: DESCRITIVO_TECNICO.md  GUIA_DO_USUARIO.md  MANUAL_UX_TEST_GUIDE.md  TECHNICAL.md  TECHNICAL_REPORT.md  TEST_PROTOCOL.md  stress-test-log.md
docs/plans/: 2026-02-27-stress-test-design.md  2026-02-27-stress-test-fixes.md  fastslr-v3-decision-log.md  fastslr-v3-design.md
docs/superpowers/plans/: 2026-03-19-refinement-pilot-plan.md
docs/superpowers/specs/: 2026-03-19-refinement-pilot-design.md
outro/baseline/: t1_auto_results.xlsx  test_triagem_rsl_metadata.py  triagem_rsl_abrangente.csv  triagem_rsl_conservador.csv  triagem_rsl_metadata.py  triagem_rsl_moderado.csv
outro/baseline_2/: Triagem_RSL.csv  theme_objective.txt
outro/baseline_3/: triage_abrangente.csv  triage_conservador.csv  triage_moderado.csv  triage_slr.py
src/fastslr/: __init__.py  __main__.py
src/fastslr/app/: __init__.py  cli.py  controller.py  profiles.py  tui.py
src/fastslr/core/: __init__.py  adapters.py  config.py  config_schema.json  constants.py  coverage.py  default_config.json  engine.py  io.py  models.py  normalization.py  patterns.py  presets.py  scoring.py
src/fastslr/i18n/: __init__.py
src/fastslr/i18n/locales/: en.json  es.json  pt_BR.json
tests/: conftest.py  test_boundaries.py  test_cli.py  test_compliance.py  test_config.py  test_config_regressions.py  test_config_robustez.py  test_coverage_analysis.py  test_coverage_quotes.py  test_engine.py  test_engine_stats.py  test_integration.py  test_io.py  test_io_coverage_extra.py  test_io_encoding.py  test_main_findings_regressions.py  test_normalization.py  test_normalization_determinism.py  test_packaging.py  test_patterns.py  test_presets.py  test_profiles.py  test_proximity.py  test_scoring.py  test_thresholds_consistencia.py  test_tui_findings.py  test_tui_smoke.py
tests/fixtures/: scenario_a_articles.csv  scenario_a_config.json  scenario_b_articles.csv  scenario_b_config.json  scenario_c_articles.csv  scenario_c_config.json  scenario_d_articles.csv  scenario_d_config.json
vault/: Algoritmo - Avaliação de Bloco.md  Algoritmo - Decisão Final.md  Algoritmo - Normalização.md  Algoritmo - Padrões e Proximidade.md  Algoritmo - Pipeline de Triagem.md  Algoritmo - Políticas de Decisão.md  Algoritmo - Pontuação (Scoring).md  Algoritmo - Pré-triagem T0.md  Arquitetura - Camada App e Controller.md  Arquitetura - Camada Core.md  Arquitetura - Visão Geral.md  Configuração - config e termos.md  Fluxo de Dados.md  Glossário.md  Home.md  Objetivo e Visão.md  Reprodutibilidade e Pacote Acadêmico.md  Validação - Auditoria Completa.md  Validação - Bugs e Riscos Conhecidos.md  Validação - Checklist.md  Validação - Correções Aplicadas.md  Validação - Estratégia de Testes.md
