[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastslr"
dynamic = ["version"]
description = "FastSLR - Universal deterministic triage for Systematic Literature Reviews"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Leonardo Harden", email = "harden.leo@gmail.com" }]
maintainers = [{ name = "Leonardo Harden", email = "harden.leo@gmail.com" }]
keywords = [
    "systematic-literature-review",
    "slr",
    "screening",
    "triage",
    "academic",
    "research",
    "deterministic",
    "bibliometrics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyright>=1.1",
    "pandas-stubs>=2.0",
    "coverage>=7.0",
]
chardet = ["chardet>=5.0"]

[project.scripts]
fastslr = "fastslr.app.cli:app"

[project.urls]
Homepage = "https://github.com/Lharden/fastslr"
Repository = "https://github.com/Lharden/fastslr"
Documentation = "https://github.com/Lharden/fastslr/blob/master/docs/GUIA_DO_USUARIO.md"
Issues = "https://github.com/Lharden/fastslr/issues"
Changelog = "https://github.com/Lharden/fastslr/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "fastslr.core.constants.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fastslr = ["py.typed", "i18n/locales/*.json", "core/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = [
    "build",
    "dist",
    "teste",
    "**/__pycache__",
    "**/.ruff_cache",
    "**/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
